[package]
name = "chain-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = {version = "2.1.1", features = ["rand_core"]}
parity-scale-codec = {version = "3.7.4", features = ["derive"]}
rand = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_with = "1.11.0"
sha2 = "0.10.8"

[lib]
name = "chain_core"
path = "src/lib.rs"
